syntax = "proto3";

import "google/api/annotations.proto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
      option (google.api.http) = {
          get: "/v2/hello/{name}"
        };
  }

  rpc SayBye (HelloRequest) returns (HelloReply) {
      option (google.api.http) = {
          put: "/v2/bye"
          body: "*"
      };
    }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
